Fix Video Intro compnent scaling alignment when screen width narrows

--- a/src/components/Cast/Cast.css
+++ b/src/components/Cast/Cast.css
@@ -40,7 +40,7 @@
     margin: 1rem;
 }
 
-.orange-line {
+.orange-line-cast {
     background-color: rgb(224,117,60);
     border: none;
     height: 3px;
